samples/_failures_safe/1761465406_4fdadb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be492c91.c: In function ‘main’:
./samples/SAFE/__tmp_be492c91.c:131:9: error: expected expression at end of input
  131 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_be492c91.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be492c91.c:131:9: error: expected declaration or statement at end of input
